# grpc-binary-logger

./: Cargo.toml  build.rs
grpc-binary-logger/: Cargo.toml
grpc-binary-logger-proto/: Cargo.toml
grpc-binary-logger-proto/src/: lib.rs
grpc-binary-logger-test-proto/: Cargo.toml
grpc-binary-logger-test-proto/proto/: test.proto
grpc-binary-logger-test-proto/src/: lib.rs
grpc-binary-logger/examples/: server.rs
grpc-binary-logger/src/: lib.rs  middleware.rs  predicate.rs  sink.rs
grpc-binary-logger/tests/end_to_end_cases/: server.rs  test_utils.rs  tests.rs
src/: binary_logger.rs  lib.rs  predicate.rs
