[package]
name = "grpc-binary-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
bytes = "1.0"
futures = "0.3"
http = "0.2"
http-body = "0.4"
hyper = "0.14"
pin-project = "1.0"
prost = "0.10"
prost-types = { version = "0.10", features = ["std"] }
tokio = {version = "1", features = [ "rt" ]}
tonic = "0.7"
tower = "0.4"
grpc-binary-logger-proto = { path = "../grpc-binary-logger-proto" }

[dev-dependencies]
grpc-binary-logger-test-proto = { path = "../grpc-binary-logger-test-proto" }
tokio-stream = { version = "0.1", features = ["net"] }
assert_matches = "1"

[build-dependencies]
prost-build = "0.10"
tonic-build = "0.7"
